Tentative ajout solution exo2 ape45 par Alexis Macq

--- a/exercises/APE5-6/APE5-6-Nash.tex
+++ b/exercises/APE5-6/APE5-6-Nash.tex
@@ -1,6 +1,7 @@
 \documentclass{../ape}
 
 \usepackage{../../linma2345}
+\usepackage{amsmath}
 
 \begin{document}
 
@@ -105,6 +106,10 @@ A Nash equilibrium is called \emph{strong} if there exists no subset of players 
 	\item[a.] Find a game with at least three players for which such a strong Nash equilibrium exists.
 	\item[b.] Show that the game defined in exercise 2. does not allow any strong Nash equilibrium.
 \end{enumerate}
+
+\begin{solution}
+\input{05_06_02}
+\end{solution}
 
 \section{}
 A new oil deposit has been discovered in the North Sea. Two large buyers will play the auction. 
